# thirdPartyJniSo

./: .gitignore  .project  README.md
jni/: Android.mk  add_test.h
prebuild/: .gitignore  README.md
prebuild/jni/: Android.mk  Application.mk  add_test.h
prebuild2/jni/: Android.mk  sub_test.c
thirdPartyJniSoAS/: README.md  build.gradle  settings.gradle
thirdPartyJniSoAS/app/: build.gradle
thirdPartyJniSoAS/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
thirdPartyJniSoAS/app/src/main/cpp/include/: add_test.h  sub_test.h
thirdPartyJniSoAS/app/src/main/java/com/example/hellojni/: JNIUtils.java  MainActivity.java
thirdPartyJniSoAS/app/src/main/jni/: hello-jni.c  helper.h
thirdPartyJniSoAS/app/src/main/res/layout/: activity_main.xml
thirdPartyJniSoAS/app/src/main/res/values/: strings.xml
thirdPartyJniSoAS/gradle/wrapper/: gradle-wrapper.properties
thirdPartyJniSoAS/prebuild/: build.gradle
thirdPartyJniSoAS/prebuild/src/main/jni/: add_test.c
thirdPartyJniSoEclipse/: .gitignore  .project
thirdPartyJniSoEclipse/jni/: Android.mk  Application.mk  add_test.h  hello-jni.c
